@@ -34,6 +34,7 @@
  + New atlas format: Google Earth Overlay (unrestricted Google Custom Map) 
  ! Fixed: #3008934 (MM1B calculation problem in .map file)
  + New map source: MyTopo.com (USA only)
+ + New map source: Yahoo Maps Japan
 
  1.7: (2010-02-05)
  ~ Project has been renamed to "Mobile Atlas Creator" taking account that
